--- a/src/main/java/ui/BuyTicket.form
+++ b/src/main/java/ui/BuyTicket.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ui.BuyTicket">
-  <grid id="27dc6" binding="contentPane" layout-manager="GridLayoutManager" row-count="7" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="contentPane" layout-manager="GridLayoutManager" row-count="7" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="548" height="289"/>
@@ -13,7 +13,7 @@
     <children>
       <component id="20741" class="javax.swing.JLabel" binding="buyTicketsLabel" custom-create="true">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <font size="30" style="1"/>
@@ -21,22 +21,9 @@
           <text value="Buy Tickets"/>
         </properties>
       </component>
-      <component id="55fbc" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="17"/>
-          </grid>
-        </constraints>
-        <properties>
-          <font name="Courier" size="20" style="1"/>
-          <horizontalAlignment value="0"/>
-          <horizontalTextPosition value="0"/>
-          <text value="Regular Ticket"/>
-        </properties>
-      </component>
       <component id="baabc" class="javax.swing.JLabel">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+          <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="17"/>
           </grid>
         </constraints>
@@ -49,7 +36,7 @@
       </component>
       <component id="b9ddb" class="javax.swing.JLabel">
         <constraints>
-          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+          <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="17"/>
           </grid>
         </constraints>
@@ -62,7 +49,7 @@
       </component>
       <component id="74e08" class="javax.swing.JLabel">
         <constraints>
-          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+          <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="17"/>
           </grid>
         </constraints>
@@ -75,12 +62,12 @@
       </component>
       <splitpane id="a02b6">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="200" height="200"/>
           </grid>
         </constraints>
         <properties>
-          <dividerLocation value="90"/>
+          <dividerLocation value="50"/>
           <resizeWeight value="0.0"/>
         </properties>
         <border type="none"/>
@@ -91,7 +78,7 @@
             </constraints>
             <properties>
               <continuousLayout value="false"/>
-              <dividerLocation value="90"/>
+              <dividerLocation value="92"/>
               <resizeWeight value="0.5"/>
             </properties>
             <border type="none"/>
@@ -101,6 +88,7 @@
                   <splitpane position="left"/>
                 </constraints>
                 <properties>
+                  <background color="-8013689"/>
                   <text value="+"/>
                 </properties>
               </component>
@@ -109,6 +97,7 @@
                   <splitpane position="right"/>
                 </constraints>
                 <properties>
+                  <background color="-7841959"/>
                   <text value="-"/>
                 </properties>
               </component>
@@ -119,6 +108,7 @@
               <splitpane position="left"/>
             </constraints>
             <properties>
+              <background color="-16738552"/>
               <horizontalAlignment value="0"/>
               <horizontalTextPosition value="0"/>
               <text value="0"/>
@@ -128,12 +118,12 @@
       </splitpane>
       <splitpane id="bfc29">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="200" height="200"/>
           </grid>
         </constraints>
         <properties>
-          <dividerLocation value="90"/>
+          <dividerLocation value="50"/>
         </properties>
         <border type="none"/>
         <children>
@@ -142,7 +132,7 @@
               <splitpane position="right"/>
             </constraints>
             <properties>
-              <dividerLocation value="89"/>
+              <dividerLocation value="92"/>
               <resizeWeight value="0.5"/>
             </properties>
             <border type="none"/>
@@ -153,6 +143,7 @@
                 </constraints>
                 <properties>
                   <alignmentX value="0.0"/>
+                  <background color="-8013689"/>
                   <borderPainted value="true"/>
                   <contentAreaFilled value="true"/>
                   <hideActionText value="false"/>
@@ -164,6 +155,7 @@
                   <splitpane position="right"/>
                 </constraints>
                 <properties>
+                  <background color="-7841959"/>
                   <text value="-"/>
                 </properties>
               </component>
@@ -183,12 +175,12 @@
       </splitpane>
       <splitpane id="f37be">
         <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="200" height="200"/>
           </grid>
         </constraints>
         <properties>
-          <dividerLocation value="90"/>
+          <dividerLocation value="50"/>
         </properties>
         <border type="none"/>
         <children>
@@ -197,7 +189,7 @@
               <splitpane position="right"/>
             </constraints>
             <properties>
-              <dividerLocation value="89"/>
+              <dividerLocation value="92"/>
               <resizeWeight value="0.5"/>
             </properties>
             <border type="none"/>
@@ -207,6 +199,7 @@
                   <splitpane position="left"/>
                 </constraints>
                 <properties>
+                  <background color="-8013689"/>
                   <borderPainted value="true"/>
                   <text value="+"/>
                 </properties>
@@ -216,6 +209,7 @@
                   <splitpane position="right"/>
                 </constraints>
                 <properties>
+                  <background color="-7841959"/>
                   <text value="-"/>
                 </properties>
               </component>
@@ -235,12 +229,12 @@
       </splitpane>
       <splitpane id="ec81e">
         <constraints>
-          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="200" height="200"/>
           </grid>
         </constraints>
         <properties>
-          <dividerLocation value="90"/>
+          <dividerLocation value="50"/>
         </properties>
         <border type="none"/>
         <children>
@@ -249,7 +243,7 @@
               <splitpane position="right"/>
             </constraints>
             <properties>
-              <dividerLocation value="89"/>
+              <dividerLocation value="92"/>
               <resizeWeight value="0.5"/>
             </properties>
             <border type="none"/>
@@ -259,6 +253,7 @@
                   <splitpane position="left"/>
                 </constraints>
                 <properties>
+                  <background color="-8013689"/>
                   <text value="+"/>
                 </properties>
               </component>
@@ -267,6 +262,7 @@
                   <splitpane position="right"/>
                 </constraints>
                 <properties>
+                  <background color="-7841959"/>
                   <text value="-"/>
                 </properties>
               </component>
@@ -286,17 +282,51 @@
       </splitpane>
       <component id="df1f8" class="javax.swing.JButton" binding="buyButton">
         <constraints>
-          <grid row="6" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-16738552"/>
           <text value="BUY"/>
         </properties>
       </component>
       <vspacer id="2085c">
         <constraints>
-          <grid row="5" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="5" column="0" row-span="1" col-span="3" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
+      <component id="631dc" class="javax.swing.JButton" binding="backButton" default-binding="true">
+        <constraints>
+          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <borderPainted value="true"/>
+          <contentAreaFilled value="true"/>
+          <iconTextGap value="4"/>
+          <selected value="false"/>
+          <text value="back"/>
+        </properties>
+      </component>
+      <component id="8f23a" class="javax.swing.JButton" binding="cancelButton" default-binding="true">
+        <constraints>
+          <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="cancel"/>
+        </properties>
+      </component>
+      <component id="55fbc" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="17"/>
+          </grid>
+        </constraints>
+        <properties>
+          <font name="Courier" size="20" style="1"/>
+          <horizontalAlignment value="0"/>
+          <horizontalTextPosition value="0"/>
+          <text value="Regular Ticket"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
