--- a/src/main/java/ui/BuyTicket.form
+++ b/src/main/java/ui/BuyTicket.form
@@ -78,7 +78,7 @@
             </constraints>
             <properties>
               <continuousLayout value="false"/>
-              <dividerLocation value="80"/>
+              <dividerLocation value="224"/>
               <resizeWeight value="0.5"/>
             </properties>
             <border type="none"/>
@@ -132,7 +132,7 @@
               <splitpane position="right"/>
             </constraints>
             <properties>
-              <dividerLocation value="80"/>
+              <dividerLocation value="224"/>
               <resizeWeight value="0.5"/>
             </properties>
             <border type="none"/>
@@ -143,7 +143,7 @@
                 </constraints>
                 <properties>
                   <alignmentX value="0.0"/>
-                  <background color="-8013689"/>
+                  <background color="-9250448"/>
                   <borderPainted value="true"/>
                   <contentAreaFilled value="true"/>
                   <hideActionText value="false"/>
@@ -155,7 +155,7 @@
                   <splitpane position="right"/>
                 </constraints>
                 <properties>
-                  <background color="-7841959"/>
+                  <background color="-478042"/>
                   <text value="-"/>
                 </properties>
               </component>
@@ -189,7 +189,7 @@
               <splitpane position="right"/>
             </constraints>
             <properties>
-              <dividerLocation value="80"/>
+              <dividerLocation value="224"/>
               <resizeWeight value="0.5"/>
             </properties>
             <border type="none"/>
@@ -243,7 +243,7 @@
               <splitpane position="right"/>
             </constraints>
             <properties>
-              <dividerLocation value="80"/>
+              <dividerLocation value="224"/>
               <resizeWeight value="0.5"/>
             </properties>
             <border type="none"/>
@@ -311,6 +311,7 @@
           <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-5488582"/>
           <text value="cancel"/>
         </properties>
       </component>
